--- a/favorites.html
+++ b/favorites.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<link rel="icon" href="118930615_107816894323238_8229625044155393133_n.jpg">
+<link rel="icon" href="Images/Birb.jpg">
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Birb videos</title>
   </head>
   <body>
-  <a href="https://tracenji.github.io">Back</a>
+  <a href="index.html">Back</a>
   <h1>Birb Favorites</h1>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
