--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <li><a href="http://steamcommunity.com/profiles/76561198169612010"target="_blank">Steam</a></li>
 <br>
 <br>
-<a href="https://tracenji.github.io/favorites.html">Favorites</a>
+<a href="favorites.html">Favorites</a>
 </ul>
 <button type="button" class="collapsible">Discord Server</button>
 <div class="content">
