--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta charset="utf-8">
     <title>Birb</title>
   </head>
+  <style>
+ .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+.collapsible {
+}
+
+.content {
+  max-height: 0;
+  overflow: hidden;
+}
+</style>
    </body>
    <img src="Images/BirbBanner.jfif" alt="Birb" class="center">
 <h1>Birb website</h1>
+<a href="https://www.radiotrondelag.no/" target="_blank">RADIO</a>
+<br>
+<br>
 <ul>
 <a href="https://www.youtube.com/watch?v=F01jjkZ8g8I&feature=youtu.be" target="_blank">mitt goal</a>
 <li>Item 2</li>
@@ -33,24 +51,12 @@
 <div class="content">
 <iframe src="https://discord.com/widget?id=788920381779214387&theme=light" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </div>
+<button type="button" class="collapsible">Image Gallery</button>
+<div class="content">
+<iframe src="gallery.html" width="100%" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</div>
  </body>
- <style>
- .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-}
-<style>
-<style>
-.collapsible {
-}
-
-.content {
-  max-height: 0;
-  overflow: hidden;
-}
-</style>
+ 
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
@@ -67,5 +73,30 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+<body>
+<div class="radio">
+  <audio controls src="http://nettradio.radiotrondelag.no:8000/radio_trondelag" autoplay id="myAudio">
+                Your browser does not support the
+                <code>audio</code> element.
+        </audio>
+		</div>
+<style>
+.radio{
+display: none
+}
+</style>
+  <script>
+    // function goPlay(){
+    //     console.log("in goplay")
+    setTimeout(() => {
+        var x = document.getElementById("myAudio");
+        // function playAudio() {
+        x.play();
+      },
+      1000
+    )
+    // }
+  </script>
+</body>
  </html>
  
