--- a/Backup/favorites.html
+++ b/Backup/favorites.html
@@ -21,7 +21,7 @@
 }
 .collapsibleyoutube {
   background-color: transparent;
-  background-image: url("https://github.com/Tracenji/Tracenji.github.io/blob/main/yt_icon_rgb.png");
+  background-image: url("Images/yt_icon_rgb2.png");
   color: white;
   cursor: pointer;
   border: none;
@@ -46,7 +46,7 @@
 <h2>Videos</h2>
 
 
-<button type="button" class="collapsibleyoutube"><img src="https://github.com/Tracenji/Tracenji.github.io/blob/main/yt_icon_rgb2.png?raw=true" alt="Birb" height="25.9" ></button>
+<button type="button" class="collapsibleyoutube"><img src="Images/yt_icon_rgb2.png" alt="Birb" height="25.9" ></button>
 <div class="content">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/yIAH0DUc09w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<br>
