--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 <body>
+//Radio trondelag
 <div class="radio">
   <audio controls src="http://nettradio.radiotrondelag.no:8000/radio_trondelag" autoplay id="myAudio">
                 Your browser does not support the
