--- a/favorites/index.html
+++ b/favorites/index.html
@@ -6,7 +6,7 @@
     <title>Birb videos</title>
   </head>
   <body>
-  <a href="index.html">Back</a>
+  <a href="../">Back</a>
   <h1>Birb Favorites</h1>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
